# ComputerGraphicsAssignments

./: README.md
A01/: .gitignore  CMakeLists.txt
A01/include/modules/: Starter.hpp  TextMaker.hpp
A01/src/: main.cpp  transforms.hpp
A02/: CMakeLists.txt
A02/assets/models/: barrel.002_Mesh.4450.mgcg  box1.mgcg  box2.mgcg  cast_Mesh.6268.mgcg  cupboard1.mgcg  decoration1.mgcg  scene.json
A02/include/modules/: Scene.hpp  Starter.hpp
A02/src/: cameras.hpp  main.cpp
A03/: CMakeLists.txt
A03/assets/models/: scene.json
A03/include/modules/: Scene.hpp  Starter.hpp  TextMaker.hpp
A03/src/: WVP.hpp  main.cpp
